--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
+
+springdoc.paths-to-match=/api/**/v1/**
+springdoc.swagger-ui.use-root-path=true
+
+cors.origin.pattern=http://localhost:8080,http://localhost:3000
