--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
-springdoc.paths-to-match=/api/**/v1/**
+springdoc.paths-to-match=/api/**/v1/**,/auth/**
 springdoc.swagger-ui.use-root-path=true
+
 cors.origin.pattern=http://localhost:8080,http://localhost:3000
+security.jwt.token.secret-key=v4l3nt3
+security.jwt.token.expire-length=3600000
