--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
 			<artifactId>mysql</artifactId>
 			<version>${testcontainers.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
