--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ springdoc.swagger-ui.use-root-path=true
 cors.origin.pattern=http://localhost:8080,http://localhost:3000
 security.jwt.token.secret-key=v4l3nt3
 security.jwt.token.expire-length=3600000
+
+server.port=80
