--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -19,9 +19,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Setup Java JDK
-      uses: actions/setup-java@v2]
+      uses: actions/setup-java@v3.14.1
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'adopt'
         cache: maven
         
