--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -26,7 +26,7 @@ jobs:
         cache: maven
         
     - name: Build aplication jar
-      working-directory: ./rest-springboot-kotlin
+      working-directory: ./
       run: mvn clean package
     
     - name: Docker Compose Build
