--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
   rest-spring-boot-kotlin:
     image: azevedomax/rest-spring-boot-kotlin
     restart: always
-    build: ./rest-springboot-kotlin
-    working_dir: /rest-springboot-kotlin
+    build: ./
+    working_dir: /
     environment:
       TZ: America/Sao_Paulo
       SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_spring_boot_kotlin?useTimezone=True&serverTimezone=UTC
