--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -30,7 +30,7 @@ jobs:
       run: mvn clean package
     
     - name: Docker Compose Build
-      working-directory: ../
+      working-directory: ./
       run: docker compose build
 
     - name: Docker Compose Push
